# solo-zj-00025-20260427-0to1

./: docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: V1__initial_schema.sql
backend/src/: auth.rs  cache.rs  config.rs  db.rs  errors.rs  main.rs  models.rs
backend/src/handlers/: activities.rs  auth.rs  board_members.rs  boards.rs  cards.rs  checklists.rs  columns.rs  mod.rs  tags.rs
backend/src/middleware/: auth.rs
frontend/: Dockerfile  angular.json  nginx.conf  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/board-detail/: board-detail.component.ts
frontend/src/app/components/board-list/: board-list.component.ts
frontend/src/app/components/login/: login.component.ts
frontend/src/app/components/register/: register.component.ts
frontend/src/app/components/toast/: toast.component.ts
frontend/src/app/guards/: auth.guard.ts
frontend/src/app/models/: index.ts
frontend/src/app/pipes/: markdown.pipe.ts
frontend/src/app/services/: api.service.ts  auth.interceptor.ts  auth.service.ts  toast.service.ts
